--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> hehe time to each chicken. be rdy at 7
+          <strong>Valentine Date:</strong> hehe time to eat chicken. be rdy at 7
         </p>
       </div>
     </div>
